<resources>
    <string name="app_name">TheBestApp</string>
    <string name="sales_ico">Sales</string>
    <string name="contacts_text">Contacts</string>
    <string name="main_text">Main activity</string>
    <string name="about_text">About us</string>
    <string name="logo_1">ProjectRed</string>
    <string name="logo_2">Shop</string>
    <string name="course_start">Course start date:</string>
    <string name="course_lvl">Level:</string>
    <string name="course_desc">Course description example. Useful info...... Ah shit, Ah shit, Ah shit, Ah shit, Ah shit, Ah shit </string>
</resources>